@@ -37,6 +37,7 @@ input.cp-has-error {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px 12px;
   text-decoration: none;
+  -webkit-text-decoration-style: none;
   text-decoration-style: none;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #F4F4F4;
@@ -167,6 +168,7 @@ input.cp-has-error {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px 12px;
   text-decoration: none;
+  -webkit-text-decoration-style: none;
   text-decoration-style: none;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #F4F4F4;
@@ -202,6 +204,7 @@ input.cp-has-error {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px 12px;
   text-decoration: none;
+  -webkit-text-decoration-style: none;
   text-decoration-style: none;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #F4F4F4;
@@ -359,6 +362,7 @@ input.cp-has-error {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px 12px;
   text-decoration: none;
+  -webkit-text-decoration-style: none;
   text-decoration-style: none;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #F4F4F4;
@@ -388,6 +392,7 @@ input.cp-has-error {
   position: absolute;
   top: 50%;
   left: 50%;
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 .course_list_box_item .clickable:hover .course-information *:not([class*="clickable-label"]) {
@@ -1061,6 +1066,7 @@ input.cp-has-error {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px 12px;
   text-decoration: none;
+  -webkit-text-decoration-style: none;
   text-decoration-style: none;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #F4F4F4;
@@ -1113,6 +1119,7 @@ input.cp-has-error {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px 12px;
   text-decoration: none;
+  -webkit-text-decoration-style: none;
   text-decoration-style: none;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #F4F4F4;
@@ -1197,6 +1204,7 @@ input.cp-has-error {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px 12px;
   text-decoration: none;
+  -webkit-text-decoration-style: none;
   text-decoration-style: none;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #F4F4F4;
@@ -1266,6 +1274,7 @@ input.cp-has-error {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px 12px;
   text-decoration: none;
+  -webkit-text-decoration-style: none;
   text-decoration-style: none;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #F4F4F4;
@@ -1294,6 +1303,7 @@ input.cp-has-error {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px 12px;
   text-decoration: none;
+  -webkit-text-decoration-style: none;
   text-decoration-style: none;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #F4F4F4;
@@ -1383,6 +1393,7 @@ ul.notification-archive-list:after {
   position: absolute;
   top: 50%;
   left: 50%;
+  -ms-transform: translate(-50%, -50%) scale(1.2, 1);
   transform: translate(-50%, -50%) scale(1.2, 1);
 }
 
